--- a/src/app/components/cabecero/cabecero.component.css
+++ b/src/app/components/cabecero/cabecero.component.css
@@ -4,3 +4,15 @@
     z-index: 1;
     top: 0;
 }
+.fill {
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+.fill img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
+}
