--- a/src/app/components/detalles-oferta-empleo/detalles-oferta-empleo.component.css
+++ b/src/app/components/detalles-oferta-empleo/detalles-oferta-empleo.component.css
@@ -4,6 +4,12 @@
     border-radius: 50px;
     color: white !important;
 }
+#verSolicitudes{
+    color: white;
+}
+#verSolicitudes:hover{
+    color: #13c1ac;
+}
 a{
     text-decoration: none;
     color: black;
