--- a/src/app/components/info-portada/info-portada.component.html
+++ b/src/app/components/info-portada/info-portada.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid text-center mt-5" style="background-color: #ECEFF1; margin-bottom: 15px;">
     <div class="container p-5">
-        <h2><strong>Las categorías más solicitadas</strong></h2>
-        <div style="display: flex; margin-top: 30px;">
+        <h2><strong>Las ofertas más solicitadas</strong></h2>
+        <div class="cajaFlex" style="display: flex; margin-top: 30px;">
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
                 <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/jobs_images%2Frestaurante-albala.jpg?alt=media&token=365b1251-a7a2-4f02-9e00-b338a0a25afc" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="Sofá">                
                         <h3 class="mt-2">Prueba</h3>
                         <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
@@ -14,7 +14,7 @@
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
                 <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/jobs_images%2Frestaurante-albala.jpg?alt=media&token=365b1251-a7a2-4f02-9e00-b338a0a25afc" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="Sofá">                
                         <h3 class="mt-2">Prueba</h3>
                         <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
@@ -23,7 +23,7 @@
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
                 <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/jobs_images%2Frestaurante-albala.jpg?alt=media&token=365b1251-a7a2-4f02-9e00-b338a0a25afc" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="Sofá">                
                         <h3 class="mt-2">Prueba</h3>
                         <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
