--- a/src/app/components/slidercategorias/slidercategorias.component.html
+++ b/src/app/components/slidercategorias/slidercategorias.component.html
@@ -6,9 +6,9 @@
         <button class="btn btn-floating mt-5" (click)="section1Scroll()">
           <i class="fas fa-chevron-left"></i>
         </button>
-        <div class="col-md-11">
-          <ul style="display: inline-flex" class="col-md-12 horizontalCarousel">
-            <li class="col-md-2" #section1>
+        <div class="col-md-11 carusel">
+          <ul style="display: flex;" class="col-md-12 horizontalCarousel">
+            <li class="col-md-2 cardOferta" #section1>
               <a routerLink="/ofertas/infantil" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon"class="p-4 mt-2 fas fa-baby-carriage"></i>
@@ -18,17 +18,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
-              <a routerLink="/ofertas/fitness" class="">
-                <div class="card categories-item">
-                  <i id="categories-item-icon" class="p-4 mt-2 fas fa-dumbbell"></i>
-                  <div class="card-body">
-                    <p class="card-text">Fitness</p>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/mecanica" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-tools"></i>
@@ -38,7 +28,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/construccion" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-hammer"></i>
@@ -48,7 +38,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/hosteleria" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-utensils"></i>
@@ -58,7 +48,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/educacion" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-book"></i>
@@ -68,7 +58,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/informatica" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-desktop"></i>
@@ -78,7 +68,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/comercio" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-cash-register"></i>
@@ -88,7 +78,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/transporte" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-truck"></i>
@@ -98,7 +88,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2">
+            <li class="col-md-2 cardOferta">
               <a routerLink="/ofertas/cuidados" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-wheelchair"></i>
@@ -108,7 +98,7 @@
                 </div>
               </a>
             </li>
-            <li class="col-md-2" #section2>
+            <li class="col-md-2 cardOferta" #section2>
               <a routerLink="/ofertas/todas" class="">
                 <div class="card categories-item">
                   <i id="categories-item-icon" class="p-4 mt-2 fas fa-ellipsis-h"></i>
