--- a/src/app/components/item-solicitud-perfil/item-solicitud-perfil.component.html
+++ b/src/app/components/item-solicitud-perfil/item-solicitud-perfil.component.html
@@ -1,1 +1,15 @@
-<button (click)="eliminarSolicitud(solicitudSeleccionada)" class="btn btn-danger"><i class="fas fa-trash"></i></button>
+<div class="row">
+    <div class="col-md-3">
+        <span>{{solicitudSeleccionada.titulo | uppercase}}</span>
+    </div>
+    <div class="col-md-3">
+        <span>{{solicitudSeleccionada.categoria | uppercase}}</span>
+    </div>
+    <div class="col-md-3">
+        <span>{{solicitudSeleccionada.fechaSolicitud.seconds * 1000 | date: 'd/MM/yyyy - HH:mm'}}</span>
+    </div>
+    <div class="col-md-3">
+        <a routerLink="/ofertas/{{solicitudSeleccionada.categoria}}/{{solicitudSeleccionada.id}}" class="btn btn-light" style="margin-right: 10px; border-color: rgba(218, 218, 218, 0.65);"><i class="fas fa-eye"></i></a>
+        <button (click)="eliminarSolicitud(solicitudSeleccionada)" class="btn btn-danger"><i class="fas fa-trash"></i></button>
+    </div>
+</div>
