--- a/src/app/components/slidercategorias/slidercategorias.component.css
+++ b/src/app/components/slidercategorias/slidercategorias.component.css
@@ -2,6 +2,10 @@ a{
     text-decoration: none;
 }
 
+.container{
+    overflow-x: hidden;
+}
+
 ul{
     display: inline-flex;
     list-style: none;
@@ -24,4 +28,53 @@ ul{
 }
 .btn-floating:hover{
     background-color: rgb(214, 214, 214);
+}
+
+@media screen and (max-width: 1199px){
+    .categories-item{
+        font-size: 14px;
+    }
+    #categories-item-icon{
+        font-size: 40px;
+    }
+    .btn-floating{
+        width: 30px;
+        height: 45px;
+    }
+}
+@media screen and (max-width: 991px){
+    .categories-item{
+        font-size: 0px;
+        padding-bottom: 0px;
+    }
+    #categories-item-icon{
+        font-size: 45px;
+        top: 10px;
+    }
+    .btn-floating{
+        width: 25px;
+        height: 40px;
+    }
+}
+@media screen and (max-width: 767px){
+    .categories-item{
+        height: 80%;
+    }
+    #categories-item-icon{
+        font-size: 30px;
+        top: 0px;
+    }
+    .btn-floating{
+        visibility: hidden;
+    }
+    .horizontalCarousel{
+        flex-wrap: wrap;
+    }
+    .carusel{
+        margin-top: -5rem;
+        margin-bottom: -5rem;
+    }
+    .cardOferta{
+        width: 100%;
+    }
 }
