--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <div class="card">
+                <div class="card border-light">
                     <div class="card-header text-center">
                         <h1>Iniciar Sesión</h1>
                     </div>
