--- a/src/app/components/pie-pagina/pie-pagina.component.html
+++ b/src/app/components/pie-pagina/pie-pagina.component.html
@@ -5,7 +5,7 @@
                 <h3>Documentación</h3>
                 <ul>
                     <li><a style="font-size: 16px;" href="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fdocumentacion-usuario-wajoby.pdf?alt=media&token=0c24e49a-e6dc-4a50-b43c-951dd0949efc" target="_blank"><i class="far fa-file-alt"></i> Documentación del usuario</a></li>
-                    <li><a style="font-size: 16px;" href="https://github.com/ByBladex/WajobyProject.git" target="_blank"><i class="far fa-file-code"></i> Documentación del programador</a></li>
+                    <li><a style="font-size: 16px;" href="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fdocumentacion-programador-wajoby.pdf?alt=media&token=9ede00cb-0be8-40ec-bc14-ad76864b7da0" target="_blank"><i class="far fa-file-code"></i> Documentación del programador</a></li>
                 </ul>
                 
             </div>
