--- a/src/app/components/info-portada/info-portada.component.html
+++ b/src/app/components/info-portada/info-portada.component.html
@@ -3,27 +3,27 @@
         <h2><strong>Las ofertas más solicitadas</strong></h2>
         <div class="cajaFlex" style="display: flex; margin-top: 30px;">
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
-                <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
+                <a class="home-subsection" routerLink="/ofertas/" title="prueba" data-subsection-title="prueba" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="prueba">                
                         <h3 class="mt-2">Prueba</h3>
                         <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
                 </a>
             </div>
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
-                <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
+                <a class="home-subsection" routerLink="/ofertas/" title="prueba" data-subsection-title="prueba" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="prueba">                
                         <h3 class="mt-2">Prueba</h3>
                         <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
                 </a>
             </div>
             <div class="col-12 col-sm-6 col-md-4 infoPortada">
-                <a class="home-subsection" routerLink="/ofertas/fitness" title="Alfombra" data-subsection-title="Alfombra" data-section-order="1" rel="">
+                <a class="home-subsection" routerLink="/ofertas/" title="prueba" data-subsection-title="prueba" data-section-order="1" rel="">
                     <div class="card text-start">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="Sofá">                
+                        <img src="https://firebasestorage.googleapis.com/v0/b/wajoby-8fbf2.appspot.com/o/assets%2Fjob_default.png?alt=media&token=a22422c8-9be8-4691-b5b2-b253f0c02e4f" loading="lazy" alt="prueba">                
                         <h3 class="mt-2">Prueba</h3>
                         <p class="text-muted mb-0">2.500 solicitudes</p>
                     </div>
